fixed gaps

--- a/client/src/forms/systemInformationForm/systemInformationForm.css
+++ b/client/src/forms/systemInformationForm/systemInformationForm.css
@@ -4,7 +4,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: 80px;
+    gap: 30px;
     align-items: center;
     width: 100%;
 
